[build-system]
requires = [
  "setuptools>=62",
  "wheel"
]
build-backend = "setuptools.build_meta"
[tool.pyright]
verboseOutput = true

reportMissingImports = false
reportUnusedImport = false
reportDuplicateImport = false
reportOptionalMemberAccess = "none"
reportUnknownMemberType = false
reportUnusedVariable = "none"
reportUnboundVariable = false
reportMissingTypeStubs = false

executionEnvironments = []

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
spaces_before_comment = 1
split_before_logical_operator = true
dedent_closing_brackets = false

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra --verbose"
testpaths = [
  "test",
  "test/env_utils"
]
